# mandb

./: .bzrignore  .clang-format  .cvsignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .shellcheckrc  ChangeLog  GNUmakefile.in  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  bootstrap  bootstrap.conf  config.h.in  configure  configure.ac  configure.in  makefile.in  man-db.gnu  man-db.lsm  release.sh  stamp-h.in
docs/: ChangeLog  HACKING  HACKING.md  INSTALL.autoconf  INSTALL.quick  Makefile.am  Makefile.in  NEWS  TODO  ToDo  man-db.lsm  manpage.example  manpage.example.pod  manpage.example.sgml
gnulib/: argp-domain.patch  fdutimens-hurd.patch
include/: .cvsignore  Defines.in  comp_src.h  comp_src.h.in  config.h.in  manconfig.h  manconfig.h.in  sections.list
init/: Makefile.in
intl/: Makefile.in
lib/: Makefile.am  Makefile.in  README  alloca.c  appendstr.c  appendstr.h  basename.c  cleanup.c  cleanup.h  compression.c  compression.h  debug.c  debug.h  decompress.c  decompress.h  encodings.c  encodings.h  error.c  error.h  fatal.h  filenames.c  filenames.h  flock.c  flock.h  fnmatch.c  getcwdalloc.c  getcwdalloc.h  getopt.c  getopt1.c  gl-container-helpers.c  gl-container-helpers.h  glcontainers.c  glcontainers.h  glob.c  hashtable.c  hashtable.h  linelength.c  mkdtemp.c  mkstemp.c  orderfiles.c  (+33 more)
libdb/: Makefile.am  Makefile.in  README  db_btree.c  db_delete.c  (+11 more)
man/: LINGUAS  LINGUAS.po4a  Makefile.am  Makefile.in  Rules.man  THANKS  check-man  replace.sin  replace.sin.in
man/da/: Makefile.in
man/de/: Makefile.am  Makefile.in
man/de.UTF-8/: Makefile.am  Makefile.in
man/de.UTF-8/man1/: manpath.man1
man/de.UTF-8/man8/: accessdb.man8
man/de/man1/: apropos.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
man/de/man5/: manpath.man5
man/de/man8/: catman.man8  mandb.man8
man/de_DE.88591/man1/: apropos.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
man/de_DE.88591/man5/: manpath.man5
man/de_DE.88591/man8/: catman.man8  mandb.man8
man/de_DE.ascii/man1/: apropos.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
man/de_DE.ascii/man5/: manpath.man5
man/de_DE.ascii/man8/: catman.man8  mandb.man8
man/es/: Makefile.am  Makefile.in
man/es.UTF-8/: Makefile.am  Makefile.in
man/es/man1/: man.man1
man/es/man8/: mandb.man8
man/es_ES.88591/man1/: apropos.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
man/es_ES.88591/man5/: manpath.man5
man/es_ES.88591/man8/: accessdb.man8  catman.man8  mandb.man8
man/fr/: Makefile.am  Makefile.in
man/fr.UTF-8/: Makefile.am  Makefile.in
man/fr.UTF-8/man1/: man.man1  whatis.man1
man/fr.UTF-8/man8/: accessdb.man8  catman.man8  mandb.man8
man/fr/man1/: apropos.man1  lexgrog.man1  man.man1  manpath.man1  zsoelim.man1
man/fr/man5/: manpath.man5
man/fr/man8/: accessdb.man8
man/fr_FR.88591/man1/: apropos.man1  lexgrog.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
man/fr_FR.88591/man5/: manpath.man5
man/fr_FR.88591/man8/: accessdb.man8  catman.man8  mandb.man8
man/id/: Makefile.in
man/it/: Makefile.am  Makefile.in
man/it.UTF-8/: Makefile.am  Makefile.in
man/it/man1/: apropos.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
man/it/man5/: manpath.man5
man/it/man8/: accessdb.man8  catman.man8  mandb.man8
man/it_IT.88591/man1/: apropos.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
man/it_IT.88591/man5/: manpath.man5
man/it_IT.88591/man8/: accessdb.man8  catman.man8  mandb.man8
man/ja/: Makefile.am  Makefile.in
man/ja.UTF-8/: Makefile.am  Makefile.in
man/ja.UTF-8/man8/: mandb.man8
man/ja/man1/: apropos.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
man/ja/man5/: manpath.man5
man/ja/man8/: accessdb.man8  catman.man8
man/ja_JP.eucJP/man1/: apropos.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
man/ja_JP.eucJP/man5/: manpath.man5
man/ja_JP.eucJP/man8/: accessdb.man8  catman.man8  mandb.man8
man/ja_JP.ujis/man1/: apropos.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
man/ja_JP.ujis/man5/: manpath.man5
man/man1/: apropos.man1  lexgrog.man1  man-recode.man1  man.man1  manconv.man1  manpath.man1  whatis.man1  zsoelim.man1
man/man5/: manpath.man5
man/man8/: accessdb.man8  catman.man8  mandb.man8
man/nl/: Makefile.in
man/pl/: Makefile.am  Makefile.in
man/po4a/: Makefile.am  Makefile.in  po4a.cfg
man/po4a/Locale/Po4a/: Manext.pm
man/po4a/po/: da.po  de.po  es.po  fr.po  id.po  ja.po  ko.po  man-db-manpages.pot  man-db.pot  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sr.po  sv.po  tr.po  zh_CN.po
man/pt_BR/: Makefile.in
man/ro/: Makefile.am
man/ru/: Makefile.in
man/sr/: Makefile.in
man/sv/: Makefile.in
man/tr/: Makefile.in
man/zh_CN/: Makefile.in
src/: .cvsignore  Makefile.am  Makefile.in  README.lexgrog  README.zsoelim  accessdb.c  catman.c  check_mandirs.c  check_mandirs.h  compression.c  compression.h  convert.c  convert_name.c  convert_name.h  decompress.c  decompress.h  descriptions.c  descriptions.h  descriptions_store.c  encodings.c  encodings.h  fake_security.c  filenames.c  filenames.h  globbing.c  globbing.h  globbing_test.c  hashtable.c  hashtable.h  lexgrog.h  lexgrog.l  lexgrog.l-2.3.8  lexgrog.l-2.4a  lexgrog.l.new  lexgrog_test.c  man-recode.c  man.c  man.h  man.sh  man_db-nls.h  (+26 more)
src/tests/: Makefile  Makefile.am  Makefile.in  fspause.c  get-mtime.c  lexgrog-1  lexgrog-backslash-dash-rhs  lexgrog-basic  lexgrog-multiple-whatis  man-1  man-11  man-2  man-3  man-4  man-5  man-7  man-8  man-9  man-deleted-directory  man-exact-section-matches  man-executable-page-on-path  man-invalid-db-entry  man-language-specific-requests  man-mandatory-manpath  man-missing-locales  man-override-dir  man-recode-in-place  man-recode-suffix  man-so-links-same-section  man-suffixed-extension  man-symlinks-with-matching-names  manconv-1  manconv-2  manconv-3  manconv-coding-tags  manconv-guess-from-encoding  manconv-incomplete-char-at-eof  manconv-odd-combinations  mandb-1  mandb-2  (+17 more)
(+115 files in other folders)
